gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test5412b.d
version https://git-lfs.github.com/spec/v1
oid sha256:e3abd0841e9f61e7d6be377d3a620dfb677fe1a463b6f30262a1fd9a109e27d7
size 307
